Sculpt: Color attribute lose selected status after remesh #103394

Closed
opened 2022-12-22 05:14:10 +01:00 by Sun Kim · 10 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-20 23:32, hash: 40e5954e39
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-15 16:31, hash: 6546113f1e

Short description of error
Color attribute lose selected status after sculpt remesh.

Exact steps for others to reproduce the error

  • In Sculpt mode paint color on a mesh
  • Remesh with Color Attributes preserve enabled

ColorAttributeLoseFocus.mp4

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-20 23:32, hash: `40e5954e39` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-15 16:31, hash: `6546113f1e` **Short description of error** Color attribute lose selected status after sculpt remesh. **Exact steps for others to reproduce the error** - In Sculpt mode paint color on a mesh - Remesh with Color Attributes preserve enabled [ColorAttributeLoseFocus.mp4](https://archive.blender.org/developer/F14082013/ColorAttributeLoseFocus.mp4)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Haven't bisected, but it seems 6514bb05ea is the only relevant commit in the range in the report.

Haven't bisected, but it seems 6514bb05ea is the only relevant commit in the range in the report.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2022-12-22 14:56:48 +01:00
Member

Think I got the fix.

Think I got the fix.

This issue was referenced by fb8778a28c

This issue was referenced by fb8778a28c932a78b4f680e4b6eccd3441b38752
Member

Thanks for reporting and including a working version @persun!

Thanks for reporting and including a working version @persun!
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103394
No description provided.