source/blender/blenkernel/intern/mesh_remesh_voxel.cc
@@ -489,6 +489,16 @@ void BKE_remesh_reproject_vertex_paint(Mesh *target, const Mesh *source)
     }
   }
 
+  /* Make sure active/default color attribute (names) are brought over. */
+  if (source->active_color_attribute) {
+    MEM_SAFE_FREE(target->active_color_attribute);
+    target->active_color_attribute = BLI_strdup(source->active_color_attribute);
+  }
+  if (source->default_color_attribute) {
+    MEM_SAFE_FREE(target->default_color_attribute);
+    target->default_color_attribute = BLI_strdup(source->default_color_attribute);
+  }
+
   MEM_SAFE_FREE(source_lmap);
   MEM_SAFE_FREE(source_lmap_mem);
   MEM_SAFE_FREE(target_lmap);
